contrast issue

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -68,15 +68,6 @@
         background-color: #708090;
     }
     
-    
-    footer {
-        width: 100%;
-        background-color: #708090;
-        color:  #fbfaf8;
-        padding: 25px 50px;
-        margin-top: 200px;
-    }
-    
     footer p {
         font-size: 18px;
     }
